--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.14",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
