--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.14",
     "firebase": "^12.3.0",
+    "google-auth-library": "^10.5.0",
     "i18next": "^25.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
